--- a/css/design.css
+++ b/css/design.css
@@ -1,13 +1,5 @@
-
-.wel-page
+body
 {
-    background-size: cover;
-    background-position: top center !important;
-    background-repeat: no-repeat !important;
-    background-attachment: fixed;
-    position: absolute;
-    width: 100%;
-    height: 100%;
     background-color: #151515;
 }
 
@@ -17,7 +9,6 @@
     font-family: 'Poppins', sans-serif;
     letter-spacing: .3rem;
     text-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
-    text-align: center;
     color: white;
     font-style: bold;
     max-width:100%;
@@ -66,28 +57,38 @@
     padding: 0 8px 0 14px;
     color: rgba(255, 255, 255, 0.3);
 }
-.social-link
-{
-    width:45%;
-    border:1px solid red;
-    padding:1em;
-    margin:0 auto;​
+
+#menu ul{
+    list-style: none;
+    padding: 0.51em;
+    margin-top: 10em;
 }
-.links
-{
-    text-align: center;
-    margin: 0 auto;
-    color: white;
-    display: block;
-    position: absolute;
+
+#menu li{
     width: 100%;
-    left: 0;
-    bottom: 7.2rem;
-    font-size: 3.3rem;
-    padding: 0;
-}
-.links li {
-    display: inline-block;
+    display: inline;
     margin: 0 20px;
-    padding: 0;
+    font-size: 3.3rem;
+}
+
+.image
+{
+    width: 45%;
+    height: 45%;
+    display: inline-block;
+    border-radius: 50%;
+    border: 2px solid white;
+    margin-top: 5%;
+    margin-left: 10%;
+
+}
+.intro
+{
+    margin-top: 5%;
+    color: white;
+    font-style: bold;
+    max-width:100%;
+    max-height:100%;
+    font-family: 'Poppins', sans-serif;
+    font-size: 2em;
 }
